--- a/bonsai-engine/Cargo.toml
+++ b/bonsai-engine/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["chess", "game", "chess-engine"]
 categories = ["algorithms", "data-structures", "games", "simulation"]
 
 [dependencies]
+bonsai-chess ={ path = "../bonsai-chess"}
 
 [dev-dependencies]
 
