--- a/bonsai-cli/Cargo.toml
+++ b/bonsai-cli/Cargo.toml
@@ -12,7 +12,8 @@ keywords = ["chess", "game", "chess-engine"]
 categories = ["algorithms", "data-structures", "games", "simulation"]
 
 [dependencies]
-bonsai-chess ={ path = "../bonsai-chess"}
+bonsai-chess = { path = "../bonsai-chess"}
+bonsai-engine = { path = "../bonsai-engine" }
 
 [dev-dependencies]
 
