--- a/bonsai-gui/Cargo.toml
+++ b/bonsai-gui/Cargo.toml
@@ -12,7 +12,8 @@ keywords = ["chess", "game", "chess-engine"]
 categories = ["algorithms", "data-structures", "games", "simulation"]
 
 [dependencies]
-bonsai-chess ={ path = "../bonsai-chess"}
+bonsai-chess = { path = "../bonsai-chess"}
+bonsai-engine = { path = "../bonsai-engine" }
 
 leptos = { version = "0.8.15", features = ["csr"] }
 console_error_panic_hook = "0.1.7"
